[project]
name = "nissan-connect-scraper"
version = "0.1.0"
description = "CLI tool to scrape vehicle data from Nissan Connect"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "appium-python-client>=4.5.1",
    "arrow>=1.3.0",
    "python-dateutil>=2.9.0.post0",
    "rich>=13.9.4",
    "typer>=0.15.2",
]

[dependency-groups]
dev = ["pre-commit>=4.1.0", "pytest>=8.3.5"]

[tool.ruff]
line-length = 120
[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--showlocals --color=yes"
